--- a/frontend/screen.html
+++ b/frontend/screen.html
@@ -16,9 +16,9 @@
             <div class="row" id="content">
             </div>
             <script>
-                $('#content').load("brikes.php");
+                $('#content').load("screen_generator.php");
                 const interval = setInterval(function () {
-                    $('#content').load("brikes.php");
+                    $('#content').load("screen_generator.php");
                 }, 2000);
             </script>
         </div>
