--- a/dashboard.html
+++ b/dashboard.html
@@ -37,6 +37,7 @@
             </div>
         </main>
     </center>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         var status = "<?php echo $status; ?>";
